--- a/awesomelab3/DESCRIPTION
+++ b/awesomelab3/DESCRIPTION
@@ -10,3 +10,5 @@ Authors@R: as.person(c(
 Description: This package implements both Euclidean and Dijkstra algorithms.
 License: Unlicense 
 RoxygenNote: 6.1.1
+Suggests: 
+  roxygen2
