--- a/awesomelab3/DESCRIPTION
+++ b/awesomelab3/DESCRIPTION
@@ -8,7 +8,9 @@ Authors@R: as.person(c(
     "Laura Julià Melis <laaurajulia@gmail.com> [aut]"
   ))
 Description: This package implements both Euclidean and Dijkstra algorithms.
-License: MIT 
+License: MIT
+Encoding: UTF-8
 RoxygenNote: 6.1.1
 Suggests: 
-  roxygen2
+    roxygen2,
+    testthat
