--- a/awesomelab3/DESCRIPTION
+++ b/awesomelab3/DESCRIPTION
@@ -11,6 +11,7 @@ Description: This package implements both Euclidean and Dijkstra algorithms.
 License: MIT
 Encoding: UTF-8
 RoxygenNote: 6.1.1
+Depends: R (>= 3.5.0)
 Suggests: 
     roxygen2,
     testthat
